@@ -11,6 +11,11 @@ Package author: David A. Schneider
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-18
+2014-06-25 David Schneider
+- report Translator event processing time as percentage of total time.
+- add switches for splitting hdf5 into separate calib cycles.	
+
 Tag: V00-01-17
 2014-06-17 David Schneider
 - update documentation about storing epics.
